Fix sidebar padding-top when tabs aren't visible

--- a/src/components/chart-wrapper/chart-wrapper.scss
+++ b/src/components/chart-wrapper/chart-wrapper.scss
@@ -30,6 +30,7 @@
   z-index: 20;
   width: 100%;
   transform: translateX(-100%);
+  padding-top: 12px;
 
   .pipeline-ui {
     visibility: hidden;
